<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ToBuyList</string>
    <string name="action_settings">Settings</string>
    <string name="direct_adder_hint">買うものを入力</string>
    <string name="action_import">インポート</string>
    <string name="action_export">エクスポート</string>
    <string name="title_section1">お買いものリスト</string>
    <string name="title_section2">お知らせ場所リスト</string>
    <string name="title_section3">Debug</string>
    <string name="area_text">%1$s 付近</string>
    <string name="radius_text">半径%1$dm</string>
    <string name="action_new">追加</string>
    <string name="action_save">保存</string>
    <string name="action_discard">削除</string>
    <string name="saving_done">保存しました</string>
    <string name="dialog_saveconfirm">保存しますか？</string>
    <string name="dialog_saveconfirm_yes">保存</string>
    <string name="dialog_saveconfirm_no">保存せず終了</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_positionunset">位置が未設定です。地図上の指定したい場所をタップすると設定できます。</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="placeNameLabel">Name</string>
    
    <!-- Preference -->
    <string name="pref_category_all_title">全体</string>
    <string name="pref_split_actionbar_title">アクションバーを分割</string>
    <string name="pref_split_actionbar_summary">次回起動時から有効。</string>
    <string name="pref_itemlist_category_title">買い物リスト</string>
    <string name="pref_add_immediately_title">直接追加する</string>
    <string name="pref_add_immediately_summary">詳細入力画面を介さず、アクションバーに入力したアイテムを直接追加します。</string>
    <string name="pref_notification_category_title">通知</string>
    <string name="pref_notification_title">通知</string>
    <string name="pref_notification_summary">通知機能を有効にする場合はONにします。</string>
    <string name="pref_notif_eachitem_title">アイテムごとの通知</string>
    <string name="pref_notif_eachitem_summary">有効にするとアイテムごとに通知します。無効にすると位置単位で通知します。</string>
    <string name="pref_notif_once_title">反復して通知しない</string>
    <string name="pref_notif_once_summary">有効にすると同じ位置の通知は一度きりになります。再びいずれかのアイテムに対して位置通知が設定されるまで通知しません。</string>
    <string name="pref_vibration_title">バイブレーション</string>
    <string name="pref_vibration_summary">通知時のバイブレーション</string>
    <string name="pref_sound_title">通知音</string>
    <string name="pref_sound_summary">通知時の音</string>
    <string name="pref_ringtone_title">通知音を選択</string>
    <string name="pref_debug_category_title">デバッグ</string>
    <string name="pref_debug_title">デバッグモード</string>
    <string name="pref_debug_summary">いわずもがな</string>

    <!-- ACRA -->
    <string name="crash_toast_text">Ooooops ! I crashed, pleas send a report to help fix the issue !</string>
    <string name="crash_notif_ticker_text">Unexpected error, please send a report</string>
    <string name="crash_notif_title">ToBuyList has crashed</string>
    <string name="crash_notif_text">Please click here to help fix the issue.</string>

    <string name="crash_dialog_title">ToBuyList has crashed</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the application to stop. Please help us fix this by sending us error data, all you have to do is click OK.</string>
    <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
    <string name="crash_dialog_ok_toast">Thank you !</string>
</resources>
